--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "4d-hackathon",
   "version": "0.1.0",
   "private": true,
+  "engines": {"node":">=12.18.3"},
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -35,6 +36,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "proxy": "http://localhost:8080/"
+  }
 }
