--- a/package.json
+++ b/package.json
@@ -1,20 +1,18 @@
 {
-  "name": "4d-hackathon",
-  "version": "0.1.0",
-  "private": true,
-  "engines": {"node":">=12.18.3"},
+  "name": "adidas-hackathon",
+  "version": "1.0.0",
+  "private": false,
+  "engines": {
+    "node": ">=12.18.3",
+    "npm": ">=6.14.8"
+  },
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
     "axios": "^0.20.0",
-    "node": "^14.13.1",
     "node-sass": "^4.14.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
-    "sass": "^1.27.0"
+    "react-scripts": "3.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
